--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,3 +13,14 @@
     left: auto !important;
     right: 0px;
 }
+.items-container{
+  with: 900px;
+  background-color: #222222;
+  padding: 30px;
+}
+.items-box{
+  padding-bottom: 30px;
+  border-style: solid;
+  border-color: red;
+  width: 100%
+}
