Added Search Button to NavBar (WIP)
+Added a search bar to the navigation bar
+It is partially working
-If the current page is /pages/search, the search button works
-If it is any other page, it will just take you to pages/search

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,3 +24,12 @@
   border-color: red;
   width: 100%
 }
+
+.btn-search {
+  background: #c0c0c0;
+  border-radius: 0;
+  color: #fff;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #1c1c1c;
+}
